@@ -1,3 +1,9 @@
+2019-03-07 huku <huku@grhack.net>
+
+    * Made section dumping faster by specifying different input and output
+      block sizes in `dd'.
+
+
 2016-10-27 huku <huku@grhack.net>
 
     * Added experimental support for dumping ELF exports, imports,
